icons and footer elements alignment fix

--- a/resources/css/main.less
+++ b/resources/css/main.less
@@ -52,7 +52,7 @@ html, body {
 		}
 		.social-container {
 			overflow: hidden;
-			width:200px;
+			width:175px;
 			margin: 10px auto 0 auto;
 			.social-icon {
 				text-decoration: none;
@@ -82,7 +82,7 @@ html, body {
 	font-family: 'Raleway', sans-serif;
 	.footer-element-container {
 		overflow: hidden;
-		width: 150px;
+		width: 105px;
 		margin: 0 auto;
 		a {
 			text-decoration: none;
@@ -96,8 +96,9 @@ html, body {
 				color:#3c3c3c;
 			}
 		}
-		.footer-element-last {
-			margin-right: 0px;
-		}
 	}
+}
+
+.last-element {
+	margin-right: 0px !important;
 }
